# ingot

./: Cargo.toml  README.md  rustfmt.toml
.github/buildomat/jobs/: docs.sh  lint.sh  test-miri.sh  test.sh
ingot/: Cargo.toml  README.md
ingot-examples/: Cargo.toml
ingot-examples/benches/: choice.rs  packet.rs
ingot-examples/src/: choices.rs  lib.rs  packets.rs  tests.rs
ingot-macros/: Cargo.toml  README.md
ingot-macros/src/: choice.rs  lib.rs  packet.rs  parse.rs
ingot-macros/src/packet/: bitfield.rs  mod.rs
ingot-types/: Cargo.toml  README.md
ingot-types/src/: accessor.rs  emit.rs  error.rs  field.rs  header.rs  ip.rs  lib.rs  packet.rs  primitives.rs  util.rs
ingot/benches/: modify.rs
ingot/src/: ethernet.rs  example_chain.rs  geneve.rs  icmp.rs  igmp.rs  ip.rs  lib.rs  tcp.rs  tests.rs  udp.rs  util.rs
oxpacket/: Cargo.toml
oxpacket-macros/: Cargo.toml
oxpacket-macros/src/: lib.rs
oxpacket/src/: lib.rs
