[workspace]
resolver = "2"
members = [
    "ingot",
    "ingot-macros",
    "ingot-types",
]

[workspace.package]
edition = "2021"
license = "MIT/Apache-2.0"
repository = "https://github.com/oxidecomputer/ingot"

[workspace.dependencies]
# Internal
ingot = { path = "ingot", default-features = true }
ingot-macros = { path = "ingot-macros", default-features = false }
ingot-types = { path = "ingot-types", default-features = false }

# External
bitflags = "2"
darling = "0.20"
heapless = "0.8"
itertools = "0.13"
macaddr = { version = "1", default-features = false }
proc-macro2 = { version = "1" }
quote = "1.0"
regex = "1"
serde = { version = "1", default-features = false }
syn = { version = "2", features = ["visit"] }
zerocopy = { version = "0.8", features = ["derive"] }

# External dev-deps
criterion = "0.5"

[profile.release]
debug = 2
lto = true
