[package]
name = "ingot-macros"
version = "0.1.0"
description = "Support macros for ingot"
readme = "README.md"
categories.workspace = true
keywords.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[lib]
proc-macro = true

[dependencies]
darling.workspace = true
itertools.workspace = true
proc-macro2.workspace = true
quote.workspace = true
regex.workspace = true
syn.workspace = true
