[package]
name = "ingot-types"
version = "0.1.0"
description = "Traits and types used by ingot"
readme = "README.md"
categories.workspace = true
keywords.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[features]
alloc = []
default = ["alloc"]

[dependencies]
ingot-macros.workspace = true
macaddr.workspace = true
zerocopy.workspace = true
