[package]
name = "ingot"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true

[features]
alloc = ["serde?/alloc", "ingot-types/alloc"]
default = ["alloc", "serde"]
serde = ["dep:serde"]

[dependencies]
bitflags.workspace = true
ingot-macros.workspace = true
ingot-types.workspace = true
macaddr.workspace = true
serde = { workspace = true, features = ["derive"], optional = true }
zerocopy.workspace = true

[dev-dependencies]
criterion.workspace = true

[[bench]]
name = "modify"
harness = false
